--- a/apt-update.yml
+++ b/apt-update.yml
@@ -1,11 +1,18 @@
 ---
-- name: Hello World!
+- name: Apt Update servers
   hosts: all
  
   tasks:
-    - name: Upgrade all apt packages
-      apt: state=latest force_apt_get=yes
-    
-    - name: Check if a reboot is needed for Debian and Ubuntu boxes
-      register: reboot_required_file
-      stat: path=/var/run/reboot-required get_md5=no
+    # Upgrade packages
+    - name: upgrade apt packages
+      become: true
+      apt:
+        upgrade: yes
+        update_cache: yes
+
+    # Check if reboot is required
+    - name: check if system reboot is required
+      become: true
+      stat:
+        path: /var/run/reboot-required
+      register: reboot_required
