--- a/apt-update.yml
+++ b/apt-update.yml
@@ -1,18 +1,18 @@
 ---
 - name: Apt Update servers
   hosts: all
- 
+  become: yes
+  become_method: sudo
+
   tasks:
     # Upgrade packages
     - name: upgrade apt packages
-      become: true
       apt:
         upgrade: yes
         update_cache: yes
 
     # Check if reboot is required
     - name: check if system reboot is required
-      become: true
       stat:
         path: /var/run/reboot-required
       register: reboot_required
