--- a/apt-update.yml
+++ b/apt-update.yml
@@ -9,14 +9,15 @@
     - name: update apt list
       apt:
         update_cache: yes
-
+      become: yes
     # Upgrade packages
     - name: upgrade apt packages
       apt:
         upgrade: yes
-
+      become: yes
     # Check if reboot is required
     - name: check if system reboot is required
       stat:
         path: /var/run/reboot-required
       register: reboot_required
+      become: yes
