--- a/install-docker.yml
+++ b/install-docker.yml
@@ -39,8 +39,7 @@
     - name: Install Docker
       apt:
         name:
-          - docker-ce
-          - docker-ce-cli
+          - docker
           - containerd.io
         state: present
 
