--- a/install-docker.yml
+++ b/install-docker.yml
@@ -19,10 +19,13 @@
           - curl
           - software-properties-common
         state: present
-
+    - name: Add Docker repository
+      apt_repository:
+        repo: deb [docker.com/repo]
+      state: present
     - name: Add Docker's official GPG key
       ansible.builtin.command:
-        cmd: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+        cmd: sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
       args:
         creates: /usr/share/keyrings/docker-archive-keyring.gpg
 
