--- a/install-docker.yml
+++ b/install-docker.yml
@@ -23,7 +23,7 @@
 
     - name: Add Docker's official GPG key
       ansible.builtin.command:
-        cmd: curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc; chmod a+r /etc/apt/keyrings/docker.asc
+        cmd: curl -fsSL "https://download.docker.com/linux/ubuntu/gpg" -o /etc/apt/keyrings/docker.asc; chmod a+r /etc/apt/keyrings/docker.asc
       args:
         creates: /usr/share/keyrings/docker-archive-keyring.gpg
 
