--- a/install-docker.yml
+++ b/install-docker.yml
@@ -21,12 +21,11 @@
           - software-properties-common
         state: present
 
-    - name: Add Docker's official GPG key
-      ansible.builtin.command:
-        cmd: curl -fsSL "https://download.docker.com/linux/ubuntu/gpg" -o /etc/apt/keyrings/docker.asc; chmod a+r /etc/apt/keyrings/docker.asc
-      args:
-        creates: /usr/share/keyrings/docker-archive-keyring.gpg
-
+    - name: Add Docker's GPG key using get_url
+      get_url:
+        url: https://download.docker.com/linux/ubuntu/gpg
+        dest: /usr/share/keyrings/docker-archive-keyring.gpg
+        mode: '0644'
     - name: Add Docker repository
       ansible.builtin.command:
         cmd: echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
