--- a/install-docker.yml
+++ b/install-docker.yml
@@ -19,6 +19,9 @@
           - ca-certificates
           - curl
           - software-properties-common
+          - python3-pip
+          - virtualenv
+          - python3-setuptools
         state: present
 
     - name: Add Docker's GPG key using get_url
