--- a/install-docker.yml
+++ b/install-docker.yml
@@ -23,15 +23,23 @@
           - virtualenv
           - python3-setuptools
         state: present
-
-    - name: Add Docker's GPG key using get_url
-      get_url:
+    - name: Add Docker GPG apt Key
+      apt_key:
         url: https://download.docker.com/linux/ubuntu/gpg
-        dest: /etc/apt/keyrings/docker.asc
-        mode: '0644'
-    - name: Add Docker repository
-      shell:
-        'echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \$(. /etc/os-release && echo "$VERSION_CODENAME") stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null'
+        state: present
+
+    - name: Add Docker Repository
+      apt_repository:
+        repo: deb https://download.docker.com/linux/ubuntu noble stable
+        state: present
+        #- name: Add Docker's GPG key using get_url
+        #get_url:
+        #url: https://download.docker.com/linux/ubuntu/gpg
+        #dest: /etc/apt/keyrings/docker.asc
+        #mode: '0644'
+        # - name: Add Docker repository
+        #shell:
+        #'echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \$(. /etc/os-release && echo "$VERSION_CODENAME") stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null'
 
     - name: Update package index
       apt:
