--- a/install-docker.yml
+++ b/install-docker.yml
@@ -30,7 +30,7 @@
 
     - name: Add Docker Repository
       apt_repository:
-        repo: deb https://download.docker.com/linux/ubuntu/noble/stable
+        repo: deb https://download.docker.com/linux/ubuntu noble stable
         state: present
         #- name: Add Docker's GPG key using get_url
         #get_url:
