--- a/install-docker.yml
+++ b/install-docker.yml
@@ -28,18 +28,25 @@
         url: https://download.docker.com/linux/ubuntu/gpg
         state: present
 
-    - name: Add Docker Repository
-      apt_repository:
-        repo: deb https://download.docker.com/linux/ubuntu noble stable
+
+    - name: Add repository into sources list
+      ansible.builtin.apt_repository:
+        repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename }} stable
         state: present
-        #- name: Add Docker's GPG key using get_url
-        #get_url:
-        #url: https://download.docker.com/linux/ubuntu/gpg
-        #dest: /etc/apt/keyrings/docker.asc
-        #mode: '0644'
-        # - name: Add Docker repository
-        #shell:
-        #'echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \$(. /etc/os-release && echo "$VERSION_CODENAME") stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null'
+        filename: docker
+
+    # - name: Add Docker Repository
+    #   apt_repository:
+    #     repo: deb https://download.docker.com/linux/ubuntu noble stable
+    #     state: present
+    #     #- name: Add Docker's GPG key using get_url
+    #     #get_url:
+    #     #url: https://download.docker.com/linux/ubuntu/gpg
+    #     #dest: /etc/apt/keyrings/docker.asc
+    #     #mode: '0644'
+    #     # - name: Add Docker repository
+    #     #shell:
+    #     #'echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \$(. /etc/os-release && echo "$VERSION_CODENAME") stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null'
 
     - name: Update package index
       apt:
